- Bug fixing in extension files

--- a/partials/membershipExtension.html
+++ b/partials/membershipExtension.html
@@ -31,7 +31,7 @@
 	<tbody>
 		<tr id="rowid1" data-ng-repeat="member in results" ng-class-odd="'odd-row'" ng-class-event="'even-row'">
 			<td>{{ member.id }}</td>
-			<td>{{ member.['contact_id.display_name'] }}</td>
+			<td>{{ member['contact_id.display_name'] }}</td>
 		</tr>
 	</tbody>
 </table>
