--- a/partials/membershipExtension.html
+++ b/partials/membershipExtension.html
@@ -1,4 +1,4 @@
-<div class="crm-accordion-wrapper collapsed">
+<div  class="crm-accordion-wrapper collapsed">
   <div class="crm-accordion-header">
     Filters
   </div>
@@ -21,7 +21,7 @@
    </div>
 </div>
 
-<table class="selector row-highlight" style="position: relative;">
+<table  membershiptable class="selector row-highlight" style="position: relative;">
 	<thead class="sticky">
 		<tr>
 			<th scope="col">Id</th>
