- Testing membershipTable retrieval

--- a/partials/membershipExtension.html
+++ b/partials/membershipExtension.html
@@ -21,7 +21,7 @@
    </div>
 </div>
 
-<table  membershiptable class="selector row-highlight" style="position: relative;">
+<table id='membershipTable' class="selector row-highlight" style="position: relative;">
 	<thead class="sticky">
 		<tr>
 			<th scope="col">Id</th>
